Configure app for Render deployment with external MySQL